syntax = "proto3";

package grpc;

option go_package = "grpc/proto";

import "google/protobuf/empty.proto";

service GophKeeper {
  rpc RegisterUser(RegisterRequest) returns (google.protobuf.Empty);

  rpc SetData(DataMessage) returns (google.protobuf.Empty);

  rpc GetData(GetDataRequest) returns (DataMessage);

  rpc DownloadStorage(google.protobuf.Empty) returns (DownloadStorageResponse);

  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message RegisterRequest {
  string name = 1;
  string password = 2;
}

message GetDataRequest {
  string data_name = 1;
}

message Card {
  string name = 1;
  string number = 2;
  string cvv = 3;
}

message GetDataResponse {
  string name = 1;
  string text = 2;
  Card card = 3;
  bytes binary = 4;
}

enum DATA_TYPE {
  text = 0;
  card = 1;
  binary = 2;
}

message DataMessage {
  string name = 1;
  DATA_TYPE data_type = 2;
  string text = 3;
  Card card = 4;
  bytes binary = 5;
}

message DownloadStorageResponse {
  repeated DataMessage data = 1;
}